# ocr

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .readthedocs.yaml  README.md  codecov.yml  contributing.md  environment.yml  mkdocs.yml  ocr-coiled-3.env  ocr-coiled-s3-production.env  ocr-coiled-s3-staging.env  ocr-coiled-s3.env  ocr-config.coiled-s3.yaml  ocr-config.local.yaml  ocr-local.env  pixi.toml  pyproject.toml
.binder/: Dockerfile
.github/: dependabot.yaml  release-drafter.yml
.github/scripts/: export_pixi_to_conda.py  update_env_file.py
.github/workflows/: build_vector_docker.yaml  ci.yaml  deploy.yaml  docs.yaml  integration-tests.yaml  linting.yaml  ocr-image.yaml  release-drafter.yml  vector_image.yaml
batch_vector/centroid/: create_building_centroid.py
batch_vector/geoparquet/: CA_building_risk.py  CONUS_building_risk.py  create_epsg_5070_conus_buildings.py
batch_vector/tile_gen/: geoparquet_to_pmtiles.sh  geoparquet_to_pmtiles_conus.sh
bucket_creation/: create_s3_bucket.py
coiled-runs/: wind-spread.sh
deploy/: README.md  cli.py  managers.py
deploy/coiled/: deploy.py
docs/: access-data.md  api.md  conf.py  index.md  terms-of-data-access.md
docs/assets/: custom.css
docs/explanations/: fire-risk.md  input-datasets.md
docs/getting-started/: installation.md
docs/getting_started/: installation.md
docs/how-to/: data-pipeline.md  developer-guide-index.md  getting-started.md  input-dataset-ingestion.md  input-datasets.md  installation.md  release-procedure.md  snapshot-testing.md  user-guide-index.md  work-with-data.ipynb  work-with-input-datasets.md
docs/layout/: project_structure.md
docs/methods/: fire_risk.md  input_datasets.md
docs/methods/fire-risk/: benchmarking-make-inputs.ipynb  benchmarking-process-inputs.ipynb  benchmarking-process_inputs.ipynb  benchmarking.ipynb  california-comparison.ipynb  compare-risk-buildings.ipynb  compare-risk-rasters.ipynb  data-sources-and-provenance.md  evaluation.md  horizontal-scaling-via-spatial-chunking.ipynb  implementation.ipynb  limitations.md  overview.md  region-atomization.md  score-bins.ipynb  validation-and-uncertainty.ipynb
docs/overrides/: extra.css
docs/reference/: api.md  data-downloads.md  data-schema.md  data-sources.md  deployment.md  project-structure.md
docs/tutorials/: calculate-wind-adjusted-fire-risk-for-a-region.ipynb  data-pipeline.md
docs/usage/: data-pipeline.md  data_pipeline.md
input-data/: Untitled.ipynb
input-data/RDS-2025-0006/: 01_transfer_src_zip_to_s3.sh  02_tiff_to_icechunk.py
input-data/overture_vector/: README.md  subset_overture_address.py  subset_overture_building.py
input-data/tensor/USFS_fire_risk/: README.md
input-data/tensor/conus404/: README.md  compute_fire_weather_wind_mode.py  compute_fosberg_fire_weather_index.py  subset_conus404_from_osn.py
input-data/vector/alexandre-2016/: README.md  download_and_process.py
input-data/vector/calfire_stuctures_destroyed/: 01_download_gpkg.sh  02_gpkg_to_geoparquet.py  03_add_data_to_catalog.py  README.md
input-data/vector/overture_vector/: subset_overture_address.py  subset_overture_building.py
notebooks/: benchmarking-comprehensive.ipynb  benchmarking-make_inputs.ipynb  benchmarking-process_inputs.ipynb  benchmarking.ipynb  california_comparison.ipynb  chunking-and-tiling.ipynb  community_spread.ipynb  compare-before-and-after.ipynb  compare-risk-buildings.ipynb  compare-risk-rasters.ipynb  compare-wind-direction-modes-era5-vs-conus404.ipynb  conus-404-wind-mode.ipynb  conus404-winds.ipynb  create-conus-wide-validation-data.ipynb  data-for-explainer-figures.ipynb  elliptical_kernel.ipynb  evaluate-wind-convolution-spread.ipynb  evaluating_wind_spreading.ipynb  fire-weather-wind-mode-reprojected.ipynb  fire_weather_distribution.ipynb  fix-convolution.ipynb  horizontal-scaling-via-spatial-chunking.ipynb  icechunk_region_write_ex.ipynb  icechunk_write_region.ipynb  icechunk_write_region_coop.ipynb  icechunk_write_region_uncoop.ipynb  ignoring_zeros_smoothing.ipynb  interpolation-comparison.ipynb  methods-figures.ipynb  point_extraction.ipynb  riley2025.ipynb  score_bins.ipynb  spot-checking.ipynb  structures_destroyed.ipynb  test-ellipse-kernels.ipynb  validate-data.ipynb  wind-spreading-kernels.ipynb  wind_spread.ipynb
notebooks/extract_points/: sample_points.ipynb
ocr/: QA.ipynb  __init__.py  batch.py  cal_fire_dins.py  chunking_config.py  cli.py  config.py  console.py  conus404.py  coordinates.py  datasets.py  dep_versions.py  deploy.py  icechunk_utils.py  main.py  subsetting.py  template.py  test_wind.py  testing.py  types.py  utils.py  wind.py  wind_spread.py
ocr/data/: .gitkeep  valid_region_ids.json
ocr/datasets/: common.py
ocr/deploy/: README.md  cli.py  managers.py
ocr/input_datasets/: README.md  __init__.py  base.py  cli.py  storage.py
ocr/input_datasets/tensor/: __init__.py  (+5 more)
ocr/pipeline/: 01_Wind.py  01_Write_Region.py  02_Aggregate.py  02_Pyramid.py  02_aggregated_region_summary_stats.py  02_county_summary_stats.py  03_Tiles.sh  03_aggregated_region_pmtiles.sh  03_county_pmtiles.sh  README.md  aggregate.py  create_building_centroid_pmtiles.py  create_building_pmtiles.py  create_county_stats.py  create_pmtiles.py  create_pyramid.py  create_regional_pmtiles.py  deprecated_02_Sample.py  fire_wind_risk_regional_aggregator.py  partition.py  process_region.py  test_deploy.py  test_process.py  write_aggregated_region_analysis_files.py  write_per_region_analysis_files.py
ocr/risks/: fire.py
pipeline/: 03_Aggregate.py
tests/: conftest.py  test_cal_fire_dins.py  test_config.py  test_conus404.py  test_datasets.py  test_dep_versions.py  test_input_datasets.py  test_managers.py  test_pipeline.py  test_pipeline_snapshots.py  test_sample.py  test_snapshot.py  test_utils.py  test_wind.py
tests/pipeline/: test_aggregate.py  test_create_pmtiles.py  test_create_regional_pmtiles.py  test_fire_wind_risk_regional_aggregator.py  test_process_region.py
tests/risks/: test_fire.py  test_fire_ellipse_kernels.py  test_fire_snapshots.py
(+31 files in other folders)
