[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools-scm[toml]>=6.2", "setuptools>=64", "wheel"]

[project]
    dependencies = [
        "bokeh>=3.7.3,<4",
        "bottleneck>=1.5.0,<2",
        "cartopy>=0.25.0,<0.26",
        "click",
        "coiled>=1.118.2,<2",
        "distributed>=2025.7.0,<2026",
        "duckdb>=1.3.2,<2",
        "flox>=0.10.5,<0.11",
        "fsspec>=2025.7.0,<2026",
        "geopandas>=1.1.1,<2",
        "icechunk>=1.1.3,<2",
        "jupyter-server-proxy>=4.4.0,<5",
        "jupyterlab>=4.4.6,<5",
        "numpy",
        "obstore>=0.8.0,<0.9",
        "odc-geo>=0.4.10,<0.5",
        "opencv-python>=4.12.0.88,<5",
        "opt-einsum>=3.4.0,<4",
        "pyarrow>=21.0.0,<22",
        "pydantic-settings>=2.10.1,<3",
        "pydantic>=2.11.7,<3",
        "rich>=14.1.0,<15",
        "rioxarray>=0.19.0,<0.20",
        "s3fs>=2025.7.0,<2026",
        "typer>=0.16.1,<0.17",
        "universal-pathlib>=0.2.6,<0.3",
        "xarray>=2025.8.0,<2026",
        "zarr>=3.1.1,<4",
    ]

    dynamic         = ["version"]
    name            = "ocr"
    requires-python = "== 3.13"

[project.optional-dependencies]
    data-mgmt = [
        "adlfs>=2024.12.0",
        "awscli>=1.40.26",
        "boto3>=1.37.1",
        "earthengine-api>=1.5.11",
        "gcsfs>=2025.5.1",
        "geemap>=0.35.3",
        "jupyterlab>=4.3.6",
        "patool>=4.0.0",
        "planetary-computer>=1.0.0",
    ]
    dev = [
        "ipdb>=0.13.13",
        "pre-commit>=4.2.0",
        "pytest-cov>=6.0.0",
        "pytest>=8.3.5",
        "ruff>=0.12.7,<0.13",
        "ty>=0.0.1a7",
    ]

    # Docs includes lint tools for code formatting in docs
    docs = [
        "markdown-exec>=1.10.3",
        "mkdocs-click>=0.9.0",
        "mkdocs-material>=9.6.14",
        "mkdocs>=1.6.1",
        "mkdocstrings-python>=1.16.12",
        "mkdocstrings>=0.29.1",
        "ruff>=0.12.7,<0.13",

    ]

[project.scripts]
    ocr        = "ocr.deploy.cli:app"
    ocr-deploy = "ocr.deploy.cli:app"

[tool.setuptools.packages.find]
    include = ["ocr*"]

[tool.setuptools_scm]
    fallback_version = "999"
    local_scheme     = "node-and-date"
    version_scheme   = "post-release"

[tool.coverage.run]
    branch = true
    omit   = ["tests/*"]

[tool.ruff]
    extend-include = ["*.ipynb"]
    line-length    = 100
    target-version = "py312"

    builtins = ["ellipsis"]
    # Exclude a variety of commonly ignored directories.
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]

[tool.ruff.lint]
    ignore = [
        "E501", # Conflicts with ruff format
        "E721", # Comparing types instead of isinstance
        "E741", # Ambiguous variable names
    ]
    per-file-ignores = {}
    select = [
        # Pyflakes
        "F",
        # Pycodestyle
        "E",
        "W",
        # isort
        "I",
        # Pyupgrade
        "UP",
    ]

[tool.ruff.lint.mccabe]
    max-complexity = 18

[tool.ruff.lint.isort]
    combine-as-imports = true
    known-first-party  = []

[tool.ruff.format]
    docstring-code-format = true
    quote-style           = "single"

[tool.ruff.lint.pydocstyle]
    convention = "numpy"

[tool.ruff.lint.pyupgrade]
    # Preserve types, even if a file imports `from __future__ import annotations`.
    keep-runtime-typing = true

[tool.pytest.ini_options]
    addopts = [
        "--cov-report=term-missing",
        "--cov-report=xml",
        "--cov=./ocr",
        "--verbose",
    ]
    console_output_style = "count"

[tool.uv.sources]
    ocr = { workspace = true }

[tool.pixi.project]
    channels  = ["conda-forge"]
    name      = "ocr"
    platforms = ["linux-64", "osx-64", "osx-arm64"]

# Add the editable project pip install to the default group
[tool.pixi.pypi-dependencies]
    ocr = { path = ".", editable = true }

[tool.pixi.environments]
    all-deps = ["data-mgmt", "dev", "docs"]
    default  = ["data-mgmt", "dev"]
    dev      = ["data-mgmt", "dev"]
    docs     = ["docs"]

[tool.pixi.feature.dev.tasks]
    format         = { cmd = "ruff format" }
    lint           = { cmd = "pre-commit run --all-files" }
    run-ruff-check = { cmd = "ruff check" }
    tests          = { cmd = "pytest" }

[tool.pixi.feature.docs.tasks]
    docs-build = { cmd = "mkdocs build" }
    docs-serve = { cmd = "mkdocs serve" }

[tool.pixi.feature.data-mgmt.tasks]
    jupyter = { cmd = "jupyter lab" }

[tool.pixi.feature.data-mgmt.dependencies]
    tippecanoe = ">=2.78.0,<3"

[tool.pixi.tasks]
    export-conda-file = { cmd = "pixi project export conda-environment > environment.yml" }

    start-coiled-notebook        = { cmd = "coiled notebook start --sync --vm-type m5.xlarge --sync-ignore .pixi --sync-ignore .venv --tag Project=OCR" }
    start-coiled-notebook-bigger = { cmd = "coiled notebook start --sync --vm-type m5.2xlarge --sync-ignore .pixi --sync-ignore .venv --tag Project=OCR" }

[tool.pixi.dependencies]
    duckdb-cli            = ">=1.3.2,<2"
    gdal                  = ">=3.10.3,<4"
    libgdal-arrow-parquet = ">=3.10.3,<4"
    netcdf4               = ">=1.7.2,<2"
    numba                 = ">=0.61.2,<0.62"
    pyproj                = ">=3.7.2,<4"
    rasterio              = ">=1.4.3,<2"
    s5cmd                 = ">=2.3.0,<3"
