[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools-scm[toml]>=6.2", "setuptools>=64", "wheel"]

[project]
    dynamic         = ["version"]
    name            = "ocr"
    requires-python = ">= 3.13"
    # All runtime dependencies are managed by Pixi via conda-forge.
    # for conda/pixi users this section is intentionally empty.
    dependencies = []

[project.scripts]
    ocr        = "ocr.deploy.cli:app"
    ocr-deploy = "ocr.deploy.cli:app"

[tool.setuptools.packages.find]
    include = ["ocr*"]

[tool.setuptools_scm]
    fallback_version = "999"
    local_scheme     = "node-and-date"
    version_scheme   = "post-release"

[tool.coverage.run]
    branch = true
    omit   = ["tests/*"]

[tool.ruff]
    builtins = ["ellipsis"]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]
    extend-include = ["*.ipynb"]
    line-length = 100
    target-version = "py313"

[tool.ruff.lint]
    ignore = [
        "E501", # Conflicts with ruff format
        "E721", # Comparing types instead of isinstance
        "E741", # Ambiguous variable names
    ]
    per-file-ignores = {}
    select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.mccabe]
    max-complexity = 18

[tool.ruff.lint.isort]
    combine-as-imports = true
    known-first-party  = []

[tool.ruff.format]
    docstring-code-format = true
    quote-style           = "single"

[tool.ruff.lint.pydocstyle]
    convention = "numpy"

[tool.ruff.lint.pyupgrade]
    keep-runtime-typing = true

[tool.pytest.ini_options]
    addopts = [
        "--cov-report=term-missing",
        "--cov-report=xml",
        "--cov=./ocr",
        "--verbose",
    ]
    console_output_style = "count"

[tool.uv.sources]
    ocr = { workspace = true }

[tool.pixi.project]
    channels  = ["conda-forge"]
    name      = "ocr"
    platforms = ["linux-64", "osx-64", "osx-arm64"]

# Only keep local package as an editable PyPI dep (and rare stragglers).
[tool.pixi.pypi-dependencies]
    ocr = { path = ".", editable = true }

[tool.pixi.environments]
    # Map environments to features
    all-deps = ["coiled-deploy", "data-mgmt", "dev", "docs"]
    default  = ["coiled-deploy", "data-mgmt", "dev"]
    dev      = ["data-mgmt", "dev"]
    docs     = ["coiled-deploy", "docs"]

# Tasks grouped by features
[tool.pixi.feature.dev.tasks]
    format         = { cmd = "ruff format" }
    lint           = { cmd = "pre-commit run --all-files" }
    run-ruff-check = { cmd = "ruff check" }
    tests          = { cmd = "pytest" }

[tool.pixi.feature.docs.tasks]
    docs-build = { cmd = "mkdocs build" }
    docs-serve = { cmd = "mkdocs serve" }

[tool.pixi.feature.data-mgmt.tasks]
    jupyter = { cmd = "jupyter lab" }

# Data management feature dependencies (conda-forge)
[tool.pixi.feature.data-mgmt.dependencies]
    awscli     = ">=2.30.2,<3"
    boto3      = ">=1.40.18,<2"
    patool     = ">=4.0.1,<5"
    tippecanoe = ">=2.78.0,<3"

# Dev feature dependencies (conda-forge)
[tool.pixi.feature.dev.dependencies]
    pre-commit = ">=4.3.0,<5"
    pytest     = ">=8.4.2,<9"
    pytest-cov = ">=7.0.0,<8"
    ruff       = ">=0.13.0,<0.14"

# Dev-only PyPI deps (kept on PyPI because not available on conda-forge)
[tool.pixi.feature.dev.pypi-dependencies]
    ty = ">=0.0.1a20, <0.0.1a21"

# Docs feature dependencies (conda-forge)
[tool.pixi.feature.docs.dependencies]
    mkdocs              = ">=1.6.1,<2"
    mkdocs-click        = ">=0.9.0,<0.10"
    mkdocs-material     = ">=9.6.20,<10"
    mkdocstrings        = ">=0.30.0,<0.31"
    mkdocstrings-python = ">=1.18.2,<2"
    ruff                = ">=0.12.12,<0.14"

[tool.pixi.feature.docs.pypi-dependencies]
    markdown-exec = ">=1.11.0, <2"

[tool.pixi.feature.coiled-deploy.dependencies]
    coiled               = ">=1.118.2,<2"
    jupyter-server-proxy = ">=4.4.0,<5"
    jupyterlab           = ">=4.4.6,<5"
# Project-wide Conda dependencies (runtime + CLI + geo stack)
[tool.pixi.dependencies]
    bottleneck            = ">=1.6.0,<2"
    cartopy               = ">=0.25.0,<0.26"
    duckdb                = ">=1.3.2,<2"
    duckdb-cli            = ">=1.3.2,<2"
    flox                  = ">=0.10.6,<0.11"
    fsspec                = ">=2025.9.0,<2026"
    gdal                  = ">=3.10.3,<4"
    geopandas             = ">=1.1.1,<2"
    icechunk              = ">=1.1.5,<2"
    libgdal-arrow-parquet = ">=3.10.3,<4"
    netcdf4               = ">=1.7.2,<2"
    numba                 = ">=0.61.2,<0.62"
    obstore               = ">=0.8.1,<0.9"
    odc-geo               = ">=0.5.0rc1,<0.6"
    opencv                = ">=4.12.0,<5"
    opt-einsum            = ">=3.4.0,<4"
    pint-xarray           = ">=0.6.0,<0.7"
    pyarrow               = ">=21.0.0,<22"
    pydantic              = ">=2.11.9,<3"
    pydantic-extra-types  = ">=2.10.5,<3"
    pydantic-settings     = ">=2.10.1,<3"
    pyproj                = ">=3.7.2,<4"
    python                = "3.13.*"
    rasterio              = ">=1.4.3,<2"
    rich                  = ">=14.1.0,<15"
    rioxarray             = ">=0.19.0,<0.20"
    s3fs                  = ">=2025.9.0,<2026"
    s5cmd                 = ">=2.3.0,<3"
    semver                = ">=3.0.4,<4"
    tqdm                  = ">=4.67.1,<5"
    typer                 = ">=0.17.4,<0.18"
    universal-pathlib     = ">=0.2.6,<0.3"
    xarray                = ">=2025.9.0,<2026"
    xclim                 = ">=0.58.1,<0.59"
    zarr                  = ">=3.1.2,<4"

[tool.pixi.tasks]
    export-conda-file            = { cmd = "pixi project export conda-environment > environment.yml" }
    start-coiled-notebook        = { cmd = "coiled notebook start --sync --vm-type m5.xlarge --sync-ignore .pixi --sync-ignore .venv --tag Project=OCR" }
    start-coiled-notebook-bigger = { cmd = "coiled notebook start --sync --vm-type m5.2xlarge --sync-ignore .pixi --sync-ignore .venv --tag Project=OCR" }
